src/styles.scss
@import '@ctrl/ngx-emoji-mart/picker';

html, body {
  height: 100%;
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

body {
  margin: 0;
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

.titulo {
  font-weight: 500;
  color: #e15b35;
  font-size: 26px;
}

.notify-success {
  --mat-mdc-snack-bar-button-color: #155724;
  --mdc-snackbar-container-color: #ccf4dc;
  --mdc-snackbar-supporting-text-color: #155724;
  --mat-snack-bar-button-color: #155724;
  --mdc-snackbar-supporting-text-weight: 800;
}

.notify-error {
  --mat-mdc-snack-bar-button-color: #571206;
  --mdc-snackbar-container-color: #edd3c3;
  --mdc-snackbar-supporting-text-color: #571206;
  --mat-snack-bar-button-color: #571206;
  --mdc-snackbar-supporting-text-weight: 800;
}

#btnLimpiarFiltro {
  color: #e15b35;
  margin-right: 1rem;
}

#btnBuscar, #btnBuscar2 {
  background-color: #e15b35;
  color: white;
}

.ver {
  color: #087ac3;
}

.editar {
  color: #686868;
}

.eliminar {
  color: #9f1212;
}

.imprimir {
  color: black;
}

.col-md-3, .col-md-2 {
  min-width: 200px;
}

.lds-spinner-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 10vh;
}

.mat-mdc-progress-spinner {
  --mdc-circular-progress-active-indicator-color: #f18451;
}

.spinner-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 10vh;
  zoom: 0.6;
}

.mdc-text-field--outlined:not(.mdc-text-field--disabled).mdc-floating-label {
  color: #f59f8a !important;
}

.custom-dialog-container {
  overflow: hidden;  /* Oculta el desbordamiento exterior */
}

.custom-dialog-container .mat-dialog-content {
  max-height: calc(85vh - 64px); /* Ajusta la altura del contenido para evitar solapamiento */
  overflow-y: auto;  /* Habilita la barra de desplazamiento vertical */
}

@media (max-width: 1200px) {
  .titulo {
    font-size: 1.8rem;
  }
}

@media (max-width: 992px) {
  .titulo {
    font-size: 1.6rem;
  }

  .mat-spinner {
    width: 3rem;
    height: 3rem;
  }
}

@media (max-width: 768px) {
  .titulo {
    font-size: 1.4rem;
  }

  .mat-spinner {
    width: 2.5rem;
    height: 2.5rem;
  }
}

@media (max-width: 576px) {
  .titulo {
    font-size: 1.2rem;
  }

  .mat-spinner {
    width: 2rem;
    height: 2rem;
  }
}

